[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gcs-gateway"
version = "0.0.1"
authors = [
    {name = "Anthony Gardner"}
]
maintainers = [
    {name = "Anthony Gardner"}
]
requires-python = ">= 3.13"
dependencies = [
    "pyserial",
    "websockets",
]

[project.scripts]
gcs-gateway = "gcs_gateway.cli:main"